# assignment-adder

./: .gitignore  README.md  parser.py  pyproject.toml
src/backend/services/auth/: auth.py
src/backend/services/calendar/: calendar_service.py
src/backend/services/file_ingestion/: file_ingestor.py
src/backend/utils/models/: event.py  scopes.py
