[project]
name = "assignment-adder"
version = "0.1.0"
description = ""
authors = [
    {name = "Angel Amaya",email = "135993385+aamaya33@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf (>=1.26.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
